# getting-rusty

./: .gitignore  README.md
courses/lowlevel/: README.md
courses/lowlevel/foundations_of_rust/: README.md
courses/lowlevel/foundations_of_rust/basics/src/: main.rs
courses/lowlevel/foundations_of_rust/constructs/src/: main.rs
courses/lowlevel/foundations_of_rust/hello_world/src/: main.rs
courses/lowlevel/foundations_of_rust/ownership/src/: main.rs
tutorials/lets_get_rusty/: README.md
tutorials/lets_get_rusty/entire_stack/: README.md
tutorials/lets_get_rusty/entire_stack/todo_api/: Cargo.toml
tutorials/lets_get_rusty/entire_stack/todo_api/migrations/2025-12-28-012804-0000_create_task/: up.sql
tutorials/lets_get_rusty/entire_stack/todo_api/src/: cors.rs  db.rs  error.rs  main.rs  models.rs  prelude.rs  schema.rs
